--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <section class="hero">
       <div class="panel videoPanel">
         <div class="videoHeader">
-          <div class="videoTitle" id="videoTitle">Trajectory overlay on release frame</div>
+          <div class="videoTitle" id="videoTitle">Shot Analysis</div>
         </div>
 
         <div class="videoShell">
@@ -86,3 +86,4 @@
   <script src="app.js"></script>
 </body>
 </html>
+
